--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <DOCTYPE! html>
 <html>
 <head>
+  <meta charset="utf-8" />
 </head>
 <body>
-  <h1> Hi </h1>
+  <h1 style="color:blue;"> Hi </h1>
   <p> Welcome to nutridaili</p>
 </body>
 </html>
