Updated README and index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1 style="color:blue;"> Hi </h1>
-  <p> Welcome to nutridaili</p>
+  <p style = "font-family:verdana;"> Welcome to nutridaili</p>
 </body>
 </html>
