Added our CSS StyleShee

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title> NutriDaili </title> 
+  <title> NutriDaili </title>
+  <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous">
+  <link rel="StyleSheet" href="style.css">
 </head>
 <body>
-  <h1 style="color:blue;"> Hi </h1>
-  <p style = "font-family:verdana;"> Welcome to nutridaili asdfhdasjkfh </p>
+  <h1 id="MainTitle" >NutriDaili</h1>
+  <p style = "font-family:verdana;"> Welcome to nutridaili</p>
 </body>
 </html>
