Changed somestyle aspects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1 id="MainTitle" >NutriDaili</h1>
-  <p style = "font-family:verdana;"> Welcome to nutridaili</p>
+  <p> Welcome to nutridaili</p>
 </body>
 </html>
