/added another paragraph

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <title> NutriDaili </title>
-  <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous">
+  <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
   <link rel="StyleSheet" href="style.css">
 </head>
 <body>
   <h1 id="MainTitle" >NutriDaili</h1>
   <p> Welcome to nutridaili</p>
+  <h2 id="ContactInfo">  Contact Info </h2>
+  <p> WeAreAwsome.net </p>
 </body>
 </html>
