--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1 id="MainTitle" >NutriDaili</h1>
   <p> Welcome to nutridaili</p>
+  <p>
+  <img alt="FruitsNVeggies" height="600" id="BackImage" srcset="https://sites.psu.edu/mmenschnutrition/files/2015/10/skoptimum-nutrition.png ",width="1500" class="">
+ </p>
   <h2 id="ContactInfo">  Contact Info </h2>
   <p> WeAreAwsome.net </p>
 </body>
