antonio is being weird again, and new names and numbers added to readme

--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <DOCTYPE! html>
 <html>
+
 <head>
+
+<style>
+h1{
+  color: orange;
+  font-family: 'Arial', sans-serif;
+}
+h1.special-header{
+  color: green;
+}
+
+</style>
+
   <meta charset="utf-8" />
-  <title> NutriDaili </title>
+  <title style="text-align:center;"> NutriDaili </title style="text-align:center;">
   <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
   <link rel="StyleSheet" href="style.css">
 </head>
 <body>
-  <h1 id="MainTitle" >NutriDaili</h1>
-  <p> Welcome to nutridaili</p>
   <p>
-  <img alt="FruitsNVeggies" height="600" id="BackImage" srcset="https://sites.psu.edu/mmenschnutrition/files/2015/10/skoptimum-nutrition.png ",width="1500" class="">
- </p>
-  <h2 id="ContactInfo">  Contact Info </h2>
+  <img border="0" alt="FruitsNVeggies" id="BackImage" srcset="https://sites.psu.edu/mmenschnutrition/files/2015/10/skoptimum-nutrition.png ", class="">
+  </p>
+<h1 class='special-header' id="MainTitle"> NutriDaili </h1>
+  <p style="text-align:center;"> Welcome to nutridaili</p style="text-align:center;">
+<h2 id="ContactInfo">  Contact Info </h2>
   <p> WeAreAwsome.net </p>
+
 </body>
+
 </html>
