Added new product page and button to got to product.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ h1.special-header{
   </p>
 <h1 class='special-header' id="MainTitle"> NutriDaili </h1>
   <p style="text-align:center;"> Welcome to nutridaili</p style="text-align:center;">
+  <a href="product.html"><button>Try us!</button></a>
 <h2 id="ContactInfo">  Contact Info </h2>
   <p> WeAreAwsome.net </p>
 
