changed background, modified colours, added a div, centered product page title

--- a/index.html
+++ b/index.html
@@ -2,32 +2,21 @@
 <html>
 
 <head>
-
-<style>
-h1{
-  color: orange;
-  font-family: 'Arial', sans-serif;
-}
-h1.special-header{
-  color: green;
-}
-
-</style>
-
+  <link rel="StyleSheet" href="style.css">
   <meta charset="utf-8" />
   <title style="text-align:center;"> NutriDaili </title style="text-align:center;">
   <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
-  <link rel="StyleSheet" href="style.css">
 </head>
 <body>
-  <p>
-  <img border="0" alt="FruitsNVeggies" id="BackImage" srcset="https://sites.psu.edu/mmenschnutrition/files/2015/10/skoptimum-nutrition.png ", class="">
-  </p>
-<h1 class='special-header' id="MainTitle"> NutriDaili </h1>
-  <p style="text-align:center;"> Welcome to nutridaili</p style="text-align:center;">
-  <a href="product.html"><button>Try us!</button></a>
-<h2 id="ContactInfo">  Contact Info </h2>
-  <p> WeAreAwsome.net </p>
+
+  <h1 id="MainTitle"> NutriDaili </h1>
+    <p style="text-align:center;"> Welcome to nutridaili</p style="text-align:center;">
+    <a id="bout" href="product.html"><button>Try us!</button></a>
+  <div>
+    <h3 id="ParaOne"> Sir Alegandro the Grande.  </h3>
+  </div>
+  <h2 id="ContactInfo">  Contact Info </h2>
+    <p> WeAreAwsome.net </p>
 
 </body>
 
