--- a/product.html
+++ b/product.html
@@ -5,6 +5,6 @@
     <meta name="author" content="Faizaan Chishtie">
   </head>
     <body>
-      <h1> Welcome to product page </h1>
+      <h1 style="text-align: center;"> Welcome to product page </h1>
     </body>
 </html>
