edited product paragraph for page

--- a/product.html
+++ b/product.html
@@ -6,5 +6,14 @@
   </head>
     <body>
       <h1 style="text-align: center;"> Welcome to product page </h1>
+      <div>
+        <p id = "ProductP">
+            On this page you will be able to test out our product!<br/>
+          All you'll need to do is enter your age, height, weight, and sex.<br/>
+          With this information we'll be able to give you a rough estimate about what your caloric intake should be,<br>
+          and a few recipies!<br><br>
+          With the NutriDaili App, you'll be able to log your calories by taking photos of your food!
+        <p>
+      </div>
     </body>
 </html>
