changed more css

--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <link rel="StyleSheet" href="style.css">
     <meta name="author" content="Faizaan Chishtie">
   </head>
-    <body>
+    <body id="ProductB">
       <h1 style="text-align: center;"> Welcome to product page </h1>
       <div>
         <p id = "ProductP">
