Added new css file for product page to make things less messy

--- a/product.html
+++ b/product.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
   <head>
-    <link rel="StyleSheet" href="style.css">
+    <link rel="StyleSheet" href="product_style.css">
     <meta name="author" content="Faizaan Chishtie">
   </head>
     <body id="ProductB">
