linked stylesheet to waleed's thing

--- a/pricing.html
+++ b/pricing.html
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
-  <html>
-     <body>
-
-	<h1> 
-		Pricing 
-
-	</h1>
-
-	<p> $1.99/month  $2.99/month</p>
-
-      </body>
-   </html>
+<html>
+  <head>
+    <link rel="StyleSheet" href="style.css">
+  </head>
+  <body>
+    <div>
+      <h1>
+		    Pricing
+	   </h1>
+      <p> $1.99/month  $2.99/month</p>
+    </div>
+  </body>
+</html>
