adding some input methods using javascript

--- a/product.html
+++ b/product.html
@@ -15,5 +15,16 @@
           With the NutriDaili App, you'll be able to log your calories by taking photos of your food!
         <p>
       </div>
+      <div>
+        <br>
+        <h2> Input things here! </h2>
+        <input type ="text" id="test_in" />
+        <button onclick ="JsFunction()">Submit</button>
+        <script type="text/javascript">
+          function JsFunction(){
+            var text=document.getElementsById('text_in').value;
+          }
+        </script>
+      </div>
     </body>
 </html>
