added external javascript file for product page, liked from html page.

--- a/product.html
+++ b/product.html
@@ -19,15 +19,9 @@
         <br>
         <h2> Input things here! </h2>
         <input type ="text" id="test_in" />
+        <script src="productJS.js"></script>
         <button onclick ="JsFunction()">Submit</button>
-        <script type="text/javascript">
-          function JsFunction(){
-            var text=document.getElementsById('text_in').value;
-            return text;
-          }
-          document.getElementsById("output").innerHTML = JsFunction();
-        </script>
-        <p id="output"></p> 
+        <p id="output"></p>
       </div>
     </body>
 </html>
