Updated enitre index and added alot of css. created div to scroll down and seperated areas. still need to seperate areas in to divs to add info of each teammate and to add nav bar

--- a/index.html
+++ b/index.html
@@ -8,15 +8,58 @@
   <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
 </head>
 <body>
+<h1 id="MainTitle" NutriDaili> </h1>
 
-  <h1 id="MainTitle"> NutriDaili </h1>
-    <p style="text-align:center;"> Welcome to nutridaili</p style="text-align:center;">
-    <a id="bout" href="product.html"><button>Try us!</button></a>
-  <div>
-    <h3 id="ParaOne"> Sir Alegandro the Grande.  </h3>
+  <div class="container">
+
+  <header>
+     <h1>NutriDaili</h1>
+     <a id="bout" href="product.html"><button>Try us!</button></a>
+  </header>
+
+  <h1 style="text-align:center;"> Welcome to nutridaili </h1>
+<!--
+  <nav>
+    <ul>
+      <li><a href="#">London</a></li>
+      <li><a href="#">Paris</a></li>
+      <li><a href="#">Tokyo</a></li>
+    </ul>
+  </nav>
+-->
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+
+  <article>
+    <h1>Pricing</h1>
+    <p>pricing info doods
+    <p>more info doods
+  </article>
+
+  <article>
+    <h1>About Us</h1>
+    <p>about us doods
+    <p>even more about us
+  </article>
+
+  <article>
+    <h1>Other</h1>
+    <p>other stuff doods
+    <p>even more stuf doods
+  </article>
+
+  <footer>Copyright &copy; W3Schools.com
+    <div class="contact">
+      <h2 id="ContactInfo">  Contact Info </h2>
+        <p> WeAreAwsome.net </p>
+    </div>
+  </footer>
+
   </div>
-  <h2 id="ContactInfo">  Contact Info </h2>
-    <p> WeAreAwsome.net </p>
+
 
 </body>
 
