little modification in index file to remove words in footer

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <p>even more stuf doods
   </article>
 
-  <footer>Copyright &copy; W3Schools.com
+  <footer>
     <div class="contact">
       <h2 id="ContactInfo">  Contact Info </h2>
-        <p> WeAreAwsome.net </p>
+      <p> WeAreAwsome.net </p>
     </div>
   </footer>
 
