Background is on fleak and working with colorscheme

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
 
-<h1 id="MainTitle" NutriDaili> </h1>
-
 <div class="topnav" id="myTopnav">
-  <img src="https://gm1.ggpht.com/-QddmEsCQ-P0kpKmd28TR_O1jDL4USawIoZgsl1yD7JHl72hVi110Nq7qD8DVsoqovMgifELUEaNu9Fvh_0YKzjQYvnDVUrE4nifjrDd1Q8sFwy20OndLx7iOszJVjgsl3cxhNhg0pfezu5YD9TatObnPJWB8AVDy5RNOzQPaj6_AANeXjFnP4fSSz_dAvmSFfjP0I92fA_TaPBS_C38baCMLHZDQdwk-W5HobTC0YtuCvRZEPiFvyArH8pnWCJZoWHMMTNhcuV4BgV4iJIojKJyJx_5Z_rigsTTjBvalZpWAdIZmfqxx-ztZXjTlV5aXsDys6fD1j_CPG96h6x7bQnd0eXxLXrfq3w3f-B7Jy5wwxQmQjVcM3nRO-DwdB0mtUgGjqZ1Hchw7-i_qOpC1kLXkv6rykL1YANq7IfqCukg4ODB5Gn38b-xSMNoXqMB_lqLajsqVgzFEPXJ73A7WyI4JEfTDI89yNGbO92wgQWel02x_heX1jTm93elaXFOF7vElAXPdyDejOizmzlmtb9YluZj-7DtB2ZMqvJIQFFgQddezjM2Gs8w6WP4Pm7momQkcHYbTmmyYSr2Sk7K_nK8-oTGx7MctW-9w1y5fFWCHLoz-M_3ZMCxS34L0yWA_bz08ScVx0sojNT00x2_iYq7Njvhc9aMcHavmdj_gd5E_qeqKnMKQ-F-k7Q=w1439-h716-l75-ft" alt="NutriDaili logo" width="90" height="50">
+  <img src="image1.JPG" alt="NutriDaili logo" width="80" height="47">
   <a href="#home">Home</a>
   <a href="#pricing">Pricing</a>
   <a href="#about">About</a>
@@ -20,9 +18,8 @@
 </div>
 
   <div class="main">
-
   <header>
-     <h1>NutriDaili</h1>
+     <h1 id="MainTitle">NutriDaili</h1>
      <a id="bout" href="product.html"><button>Try us!</button></a>
   </header>
 
