added css to button

--- a/index.html
+++ b/index.html
@@ -17,22 +17,14 @@
   <a href="#other">Other</a>
 </div>
 
-  <div class="main">
+<div class="main">
   <header>
      <h1 id="MainTitle">NutriDaili</h1>
-     <a id="bout" href="product.html"><button>Try us!</button></a>
+     <a href="product.html"> <button class="button"> Try us! </button></a>
   </header>
 
-  <h1 style="text-align:center;"> Welcome to nutridaili </h1>
-<!--
-  <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
-  </nav>
--->
+  <h1 style="text-align:center;"> Welcome to NutriDaili </h1>
+
   <article>
     <h1>London</h1>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
