Starting to build calorie counter

--- a/product.html
+++ b/product.html
@@ -17,11 +17,15 @@
       </div>
       <div>
         <br>
-        <h2> Input things here! </h2>
-        <input type ="text" id="test_in" />
-        <script src="productJS.js"></script>
-        <button onclick ="JsFunction()">Submit</button>
+        <form name="calc">
+          <h2> CALORIE PROJECTION CALCULATOR </h2>
+          <div class="label">
+            <label> Age </label>
+            <button onclick ="JsFunction()">Submit</button>
+          </div>
+        </form>
         <p id="output"></p>
+
       </div>
     </body>
 </html>
