--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
   <h1 style="text-align:center;"> Welcome to NutriDaili </h1>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>What is NutriDaili?</h1>
+    <p>NutriDaili is a revolutionary app that let's you keep track of your diet while rewarding you for meeting your goals. When you are about to eat a meal, take a picture of it through the app and it will automatically count your calories for you.</p>
+    <p>We teamed up with President's Choice to reward you with PC points for maintaining your diet and eating healthy, so you can save on those groceries the next time you need to shop.</p>
+    <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
   <article>
