--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <div class="topnav" id="myTopnav">
   <img src="image1.JPG" alt="NutriDaili logo" width="80" height="47">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <a href="#pricing">Pricing</a>
   <a href="#about">About</a>
   <a href="#other">Other</a>
+  <a href="product.html">Product</a>
 </div>
 
 <div class="main">
@@ -23,37 +24,59 @@
      <a href="product.html"> <button class="button"> Try us! </button></a>
   </header>
 
-  <h1 style="text-align:center;"> Welcome to NutriDaili </h1>
-
-  <article>
+  <article class="home">
     <h1>London</h1>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </article>
 
-  <article>
+  <article id="pricing">
     <h1>Pricing</h1>
     <p>pricing info doods
     <p>more info doods
   </article>
 
-  <article>
+  <article id="about">
     <h1>About Us</h1>
     <p>about us doods
     <p>even more about us
   </article>
 
-  <article>
+  <article id="other">
     <h1>Other</h1>
     <p>other stuff doods
     <p>even more stuf doods
   </article>
 
-  <footer>
-    <div class="contact">
-      <h2 id="ContactInfo">  Contact Info </h2>
-      <p> WeAreAwsome.net </p>
+  <footer class="color" id="contact">
+    <div id="contact-top">
+        <p id="contact-title">Contact Us</p>
     </div>
+    <div id="contact-content">
+        <div id="contact-info">
+            <p class="contact-stuff" id="contact-info-first">Address</p>
+            <p class="contact-stuff">number</p>
+            <p class="contact-stuff">email@email.com</p>
+        </div>
+        <div id="contact-form">
+            <div id="name-elements">
+                <p id="contact-name">Name</p>
+                <input id="contact-name-box" placeholder="Name"/>
+            </div>
+            <div id="email-elements">
+                <p id="contact-email">Email</p>
+                <input id="contact-email-box" placeholder="Email"/>
+            </div>
+            <div id="message-elements">
+                <p id="contact-message">Message</p>
+                <textarea rows="7" id="contact-message-box" placeholder="Message"></textarea>
+            </div>
+            <div id="bottom-button">
+                <button id="contact-button">SEND</button>
+            </div>
+        </div>
+    </div>
+
   </footer>
 
   </div>
