--- a/product.html
+++ b/product.html
@@ -9,10 +9,11 @@
 
       <div class="topnav" id="myTopnav">
         <img src="image1.JPG" alt="NutriDaili logo" width="80" height="47">
-        <a href="#home">Home</a>
-        <a href="#pricing">Pricing</a>
-        <a href="#about">About</a>
-        <a href="#other">Other</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#other" href="#other">Other</a>
+        <a href="product.html">Product</a>
       </div>
 
       <div id = "divProduct">
