--- a/pricing.html
+++ b/pricing.html
@@ -1,14 +1,48 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <link rel="StyleSheet" href="style.css">
+    <link rel="StyleSheet" href="pricing.css">
   </head>
   <body>
-    <div>
-      <h1>
-		    Pricing
-	   </h1>
-      <p> $1.99/month  $2.99/month</p>
-    </div>
+<div class = "pricingT">
+<h1> PRICING </h1>
+</div>
+<table>
+  <tr>
+  </tr>
+
+    <td><div class = "boxes">$1.99</div></td>
+
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
+
+
+  </tr>
+
+
+  <tr>
+      <td><div class = "boxes">$2.99</div></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+	 leo quis mauris tempus, ultricies mollis arcu tincidunt.
+
+
+</td>
+  </tr>
+<tr>
+      <td><div class = "boxes">$3.99</div></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
+  </tr>
+</table>
+
   </body>
 </html>
