modified contacts to look nicer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="#about">About</a>
   <a href="#other">Other</a>
   <a href="product.html">Product</a>
+  <a href="#contact">Contact Us</a>
 </div>
 
 <div class="main">
@@ -24,7 +25,6 @@
      <a href="product.html"> <button class="button"> Try us! </button></a>
   </header>
 
-  <h1 style="text-align:center;"> Welcome to NutriDaili </h1>
 
   <article>
     <h1>What is NutriDaili?</h1>
@@ -52,11 +52,9 @@
   </article>
 
   <footer class="color" id="contact">
-    <div id="contact-top">
-        <p id="contact-title">Contact Us</p>
-    </div>
     <div id="contact-content">
         <div id="contact-info">
+          <p id="contact-title">Contact Us:</p>
             <p class="contact-stuff" id="contact-info-first">Address</p>
             <p class="contact-stuff">number</p>
             <p class="contact-stuff">email@email.com</p>
@@ -79,7 +77,9 @@
             </div>
         </div>
     </div>
-
+  <div id="contact-bottom"> 
+    <p id="copyright">NutriDaili INC. © 2017 | ALL RIGHTS RESERVED.</p>
+  </div>
   </footer>
 
   </div>
