--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </div>
         </div>
     </div>
-  <div id="contact-bottom"> 
-    <p id="copyright">NutriDaili INC. © 2017 | ALL RIGHTS RESERVED.</p>
+  <div id="contact-bottom">
+    <p id="copyright">NUTRIDAILI INC. © 2017 | ALL RIGHTS RESERVED.</p>
   </div>
   </footer>
 
