--- a/index.html
+++ b/index.html
@@ -33,11 +33,46 @@
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
-  <article id="pricing">
-    <h1>Pricing</h1>
-    <p>pricing info doods
-    <p>more info doods
-  </article>
+  <div id = "pricing">
+  <h1> PRICING </h1>
+
+  <table>
+    <tr>
+    </tr>
+
+      <td><div class = "boxes">$1.99</div></td>
+
+      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+  	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
+
+
+    </tr>
+
+
+    <tr>
+        <td><div class = "boxes">$2.99</div></td>
+      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+  	 leo quis mauris tempus, ultricies mollis arcu tincidunt.
+
+
+  </td>
+    </tr>
+  <tr>
+        <td><div class = "boxes">$3.99</div></td>
+      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
+  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
+  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
+  	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
+    </tr>
+  </table>
+  </div>
 
   <article id="about">
     <h1>About Us</h1>
