--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
-  <div id = "pricing">
-  <h1> PRICING </h1>
+  <div class = "pricing">
+  <h1 style="margin-top:0px;"> PRICING </h1>
 
   <table>
     <tr>
