--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+﻿<DOCTYPE! html>
 <html>
 
 <head>
@@ -6,6 +6,16 @@
   <meta charset="utf-8" />
   <title style="text-align:center;"> NutriDaili </title style="text-align:center;">
   <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
+  <link href="about_style.css" type="text/css" rel="StyleSheet">
+  <script type="text/javascript">
+      function toggle_visibility(id) {
+          var e = document.getElementById(id);
+          if (e.style.display == 'block')
+              e.style.display = 'none';
+          else
+              e.style.display = 'block';
+      }
+  </script>
 </head>
 <body>
 
@@ -72,12 +82,70 @@
   	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
     </tr>
   </table>
-  </div>
+  </div> 
 
   <article id="about">
+    <div id="faiz-up" class="up-pos">
+        <div id="up-wrapper">
+            <div id="up-container">
+	        <h3 style="color: black;">Faizaan Chishtie</h3>
+                <p style="color: black;">He is a gent</p>
+                <p><a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
+            </div>
+        </div>
+    </div>
+    <div id="alex-up" class="up-pos">
+        <div id="up-wrapper">
+            <div id="up-container">
+	        <h3 style="color: black;">Alex Moussa</h3>
+                <p style="color: black;">He is a gent</p>
+                <p><a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
+            </div>
+        </div>
+    </div>
+    <div id="rohan-up" class="up-pos">
+        <div id="up-wrapper">
+            <div id="up-container">
+	        <h3 style="color: black;">Rohan Prasad</h3>
+                <p style="color: black;">He is a gent</p>
+                <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
+            </div>
+        </div>
+    </div>
+    <div id="anton-up" class="up-pos">
+        <div id="up-wrapper">
+            <div id="up-container">
+	        <h3 style="color: black;">Antonio Resendiz Jr.</h3>
+                <p style="color: black;">He is a gent</p>
+                <p><a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
+            </div>
+        </div>
+    </div>
+    <div id="waleed-up" class="up-pos">
+        <div id="up-wrapper">
+            <div id="up-container">
+	        <h3 style="color: black;">Waleed Zafar</h3>
+                <p style="color: black;">He is a gent</p>
+                <p><a href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
+            </div>
+        </div>
+    </div>
     <h1>About Us</h1>
-    <p>about us doods
-    <p>even more about us
+    <a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');"> 
+    	<img src="faiz.jpg" alt="Faiz" style="width:275px;height:275px;">
+    </a>
+    <a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">
+    	<img src="alex.jpg" alt="Alex" style="width:275px;height:275px;">
+    </a>
+    <a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">
+    	<img src="rohan.jpg" alt="Rohan" style="width:275px;height:275px;">
+    </a>
+    <a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">
+    	<img src="anton.jpg" alt="Antonio" style="width:275px;height:275px;">
+    </a>
+    <a href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">
+    	<img src="waleed.jpg" alt="Waleed" style="width:275px;height:275px;">
+    </a>
   </article>
 
   <article id="other">
