--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <link rel="StyleSheet" href="product_style.css">
     <meta name="author" content="Faizaan Chishtie">
     <link rel="FunctionSheet" href="productJS.js">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
     <body id="ProductB">
 
