--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
     <tr>
     </tr>
 
-      <td><div class = "boxes">$1.99</div></td>
+      <td><div class = "boxes">
+<sup>$</sup>
+1.00
+<sup></sup>
+<sup>/mo</sup>
+</div></td>
 
       <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   	Aenean et felis diam. Integer vitae tortor cursus, facilisis
