--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
     </tr>
 
       <td><div class = "boxes">
-<sup>$</sup>
-1.00
-<sup></sup>
-<sup>/mo</sup>
+<sup>$</sup> 1.00 <sup>/mo</sup>
 </div></td>
 
       <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
