--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </tr>
 
       <td><div class = "boxes">
-<sup>$</sup> 1.00 <sup>/mo</sup>
+<p><sup>$</sup> 1.00 <sup>/mo</sup></p>
 </div></td>
 
       <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
