--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     </tr>
 
       <td><div class = "boxes">
-<p><sup>$</sup> 1.00 <sup>/mo</sup></p>
+<sup>$</sup> 1.00 <sup>/mo</sup>
 </div></td>
 
       <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   	Aenean et felis diam. Integer vitae tortor cursus, facilisis
   	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
   	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-  	 leo quis mauris tempus, ultricies mollis arcu waleed.</td>
+  	 leo quis mauris tempus, ultricies mollis arcu waleed <sup>$</sup> 1.00 <sup>/mo</sup>.</td>
 
 
     </tr>
