--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
 <sup>$</sup> 1.00 <sup>/mo</sup>
 </div></td>
 
-      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-  	 leo quis mauris tempus, ultricies mollis arcu waleed <sup>$</sup> 1.00 <sup>/mo</sup>.</td>
+      <td> <ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
+	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
+  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul> </td>
 
 
     </tr>
@@ -66,22 +64,18 @@
 
     <tr>
         <td><div class = "boxes">$2.99</div></td>
-      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-  	 leo quis mauris tempus, ultricies mollis arcu tincidunt.
+      <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
+	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
+  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul>
 
 
   </td>
     </tr>
   <tr>
         <td><div class = "boxes">$3.99</div></td>
-      <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-  	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-  	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-  	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
+      <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
+	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
+  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul></td>
     </tr>
 
   </div>
