--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </article>
 
   <div class = "pricing">
-  <h1 style="margin-top:0px;"> PRICING </h1>
+  <h1 style="margin-top:0px;"> PRICING </h1> </div>
 
     <tr>
     </tr>
