--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </tr>
 
       <td><div class = "boxes">
-<sup>$</sup> 1.00 <sup>/mo</sup>
+<div class = "ppp"><sup>$</sup> 1.00 <sup>/mo</sup></div>
 </div></td>
 
       <td> <ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
@@ -63,7 +63,7 @@
 
 
     <tr>
-        <td><div class = "boxes">$2.99</div></td>
+       <div class = "ppp"> <td><div class = "boxes">$2.99</div></td> </div>
       <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
 	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
   	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul>
@@ -72,7 +72,7 @@
   </td>
     </tr>
   <tr>
-        <td><div class = "boxes">$3.99</div></td>
+     <div class = "ppp">  <td><div class = "boxes">$3.99</div></td> </div>
       <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
 	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
   	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul></td>
