--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
- 
+ </div>
+
 <h1> PRICING </h1>
 <h1><p>$1.99/month</p> </h1><hr>
 <ul> 
